0.37
Updated the pgsql schema (now version 6) to move all tags into hstore columns, add a ways.nodes column and CLUSTER the nodes and ways tables.  Significant performance increases.
Fixed a bug in --bounding-box and --bounding-polygon preventing use of clipIncompleteEntities after a --tee task.
Added --read-bin and --write-bin tasks supporting the new binary data format.

0.36
Removed 0.5 support.
Added the --fast-write-pgsql task which uses PostgreSQL COPY commands to insert data.
Added the CompactTempFile node location store type which allows efficient pgsql geometry building for small data sets.
All write-pgsql tasks now default to the CompactTempFile node location type store instead of in memory.
Fixed regression in tar builds to make the launch scripts executable again.
Updated the pgsql schema (now version 5) to add a primary key to the relation_members table to allow more efficient updates.
Updated apidb support to the latest schema 20100513171259.
Updated pgsql dataset bounding box queries to force more efficient query plans by disabling inefficient join types.
Added a new dynamic idTrackerType implementation selected by default to the area filtering tasks to simplify usage.
Added the --read-replication-lag task which indicates how far behind the server a local replication is.

0.35
Registered --fast-read-xml as a task instead of requiring --fast-read-xml-0.6 to be specified.
Fixed the completeRelations option on the --bounding-box and --bounding-polygon tasks to work as expected and documented.
Updated the --fast-read-xml task to ignore changeset elements.
Various enhancements to the Ivy processing including publishing of all artefacts.
Fixed apidb tasks to correctly select the MySQL drivers instead of always using PostgreSQL drivers.
Fixed the osmosis.bat launcher to handle spaces in the installation path.

0.34
Fixed the --sort and --sort-change tasks to use 0.6 task implementations instead of the older 0.5 implementations.