@@ -12,6 +12,7 @@ import org.openstreetmap.osmosis.set.v0_6.ChangeDeriverFactory;
 import org.openstreetmap.osmosis.set.v0_6.ChangeMergerFactory;
 import org.openstreetmap.osmosis.set.v0_6.ChangeSimplifierFactory;
 import org.openstreetmap.osmosis.set.v0_6.EntityMergerFactory;
+import org.openstreetmap.osmosis.set.v0_6.FlattenFilterFactory;
 
 
 /**
@@ -34,6 +35,8 @@ public class SetPluginLoader implements PluginLoader {
 		factoryMap.put("ac", new ChangeApplierFactory());
 		factoryMap.put("derive-change", new ChangeDeriverFactory());
 		factoryMap.put("dc", new ChangeDeriverFactory());
+		factoryMap.put("flatten", new FlattenFilterFactory());
+		factoryMap.put("f", new FlattenFilterFactory());
 		factoryMap.put("merge", new EntityMergerFactory());
 		factoryMap.put("m", new EntityMergerFactory());
 		factoryMap.put("merge-change", new ChangeMergerFactory());
@@ -45,6 +48,7 @@ public class SetPluginLoader implements PluginLoader {
 		
 		factoryMap.put("apply-change-0.6", new ChangeApplierFactory());
 		factoryMap.put("derive-change-0.6", new ChangeDeriverFactory());
+		factoryMap.put("flatten-0.6", new FlattenFilterFactory());
 		factoryMap.put("merge-0.6", new EntityMergerFactory());
 		factoryMap.put("merge-change-0.6", new ChangeMergerFactory());
 		factoryMap.put("append-change-0.6", new ChangeAppenderFactory());
